--- a/public/index.html
+++ b/public/index.html
@@ -8,8 +8,12 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
   <meta name="author" content="eralha">
-  <meta name="keywords" content="">
-  <meta name="description" content="">
+  <meta name="keywords" content="4AD Digital character sheet's.">
+  <meta name="description" content="4AD Digital character sheet's.">
+
+  <meta name="og:title" content="4AD Digital character sheet's.">
+  <meta name="og:description" content="4AD Digital character sheet's.">
+  <meta name="og:image" content="http://fouragainstdarkness.herokuapp.com/images/home_img1.jpg">
 
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
@@ -24,9 +28,6 @@
 
   
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
-    
-  <!-- favicon -->
-  <link rel="shortcut icon" href="/images/favicon.ico" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
   <link rel="stylesheet" href="/css/style.css">
