--- a/public/index2.html
+++ b/public/index2.html
@@ -32,15 +32,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
   <link rel="stylesheet" href="/css/style.css">
 
-  <!--
   <link rel="stylesheet/less" type="text/css" href="/css/less/style.less">
   <script src="/js/libs/less-1.3.3.min.js"></script>
-  -->
 
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
   <script>window.jQuery || document.write('<script src="/js/libs/jquery-1.9.1.min.js"><\/script>')</script>
 
-  <script data-main="/js/dist/main.min" src="/js/libs/require.js"></script>
+  <script data-main="/js/main" src="/js/libs/require.js"></script>
   
 
 </head>
