--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
 
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
-  <link rel="stylesheet" href="/css/style.css">
+  <link rel="stylesheet" href="/css/style.css?v=2">
 
   <!--
   <link rel="stylesheet/less" type="text/css" href="/css/less/style.less">
@@ -40,7 +40,7 @@
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
   <script>window.jQuery || document.write('<script src="/js/libs/jquery-1.9.1.min.js"><\/script>')</script>
 
-  <script data-main="/js/dist/main.min" src="/js/libs/require.js"></script>
+  <script data-main="/js/dist/main.min.js?v=2" src="/js/libs/require.js"></script>
   
 
 </head>
