add service worker

--- a/public/index.html
+++ b/public/index.html
@@ -28,24 +28,24 @@
 
 
   
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
+  <link rel="stylesheet" href="/css/bootstrap.min.css" crossorigin="anonymous">
 
   
   <link rel="stylesheet" href="/css/fa_all.min.css">
   
-  
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
-  <link rel="stylesheet" href="/css/style.css?v=14">
+  <link rel="stylesheet" href="/css/style.css?v=23">
 
   <!--
   <link rel="stylesheet/less" type="text/css" href="/css/less/style.less">
   <script src="/js/libs/less-1.3.3.min.js"></script>
   -->
 
-  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-  <script>window.jQuery || document.write('<script src="/js/libs/jquery-1.9.1.min.js"><\/script>')</script>
+  
+  <script src="/js/libs/angular.min.js"></script>
+  <script src="/js/libs/jquery-1.9.1.min.js"></script>
 
-  <script data-main="/js/dist/main.min.js?v=16" src="/js/libs/require.js"></script>
+  <script data-main="/js/dist/main.min.js?v=23" src="/js/libs/require.js"></script>
   
 
 </head>
