Remove db dep from service wroker

--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
 
 
   
-  <link rel="stylesheet" href="/css/bootstrap.min.css" crossorigin="anonymous">
+  <link rel="stylesheet" href="/css/bootstrap.min.css">
 
   
   <link rel="stylesheet" href="/css/fa_all.min.css">
