--- a/public/index2.html
+++ b/public/index2.html
@@ -26,22 +26,26 @@
     gtag('config', 'UA-134153151-1');
   </script>
 
-  
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
 
+  
+  <link rel="stylesheet" href="/css/bootstrap.min.css">
+
+  
+  <link rel="stylesheet" href="/css/fa_all.min.css">
+  
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
-  
+  <link rel="stylesheet" href="/css/style.css?v=23">
 
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">  
-
-
+  <!--
   <link rel="stylesheet/less" type="text/css" href="/css/less/style.less">
   <script src="/js/libs/less-1.3.3.min.js"></script>
+  -->
 
-  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-  <script>window.jQuery || document.write('<script src="/js/libs/jquery-1.9.1.min.js"><\/script>')</script>
+  
+  <script src="/js/libs/angular.min.js"></script>
+  <script src="/js/libs/jquery-1.9.1.min.js"></script>
 
-  <script data-main="/js/main" src="/js/libs/require.js"></script>
+  <script data-main="/js/main.js?v=23" src="/js/libs/require.js"></script>
   
 
 </head>
