add offline data save on local storage

--- a/public/index.html
+++ b/public/index.html
@@ -45,7 +45,7 @@
   <script src="/js/libs/angular.min.js"></script>
   <script src="/js/libs/jquery-1.9.1.min.js"></script>
 
-  <script data-main="/js/dist/main.min.js?v=23" src="/js/libs/require.js"></script>
+  <script data-main="/js/dist/main.min.js" src="/js/libs/require.js"></script>
   
 
 </head>
