--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,7 @@
   <link rel="stylesheet" href="/css/fa_all.min.css">
   
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
-  <link rel="stylesheet" href="/css/style.css?v=23">
+  <link rel="stylesheet" href="/css/style.css">
 
   <!--
   <link rel="stylesheet/less" type="text/css" href="/css/less/style.less">
